started add employee

--- a/Client/Client/Shared/NavMenu.razor
+++ b/Client/Client/Shared/NavMenu.razor
@@ -33,7 +33,7 @@
         <AuthorizeView Policy="BusinessOwner">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="AddEmployee">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Add Employee
+                    <span class="oi oi-people" aria-hidden="true"></span> Add Employee
                 </NavLink>
             </li>
         </AuthorizeView>
