--- a/Client/Client/Shared/NavMenu.razor
+++ b/Client/Client/Shared/NavMenu.razor
@@ -22,7 +22,11 @@
                 <span class="oi oi-people" aria-hidden="true"></span> Add Business
             </NavLink>
         </li>
-
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ListOfBusiness">
+                <span class="oi oi-people" aria-hidden="true"></span> List of businesses
+            </NavLink>
+        </li>
         <AuthorizeView Policy="BusinessOwner">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="employees">
