--- a/Client/Client/Pages/AddEmployee.razor
+++ b/Client/Client/Pages/AddEmployee.razor
@@ -50,13 +50,13 @@
         <div class="row">
             <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
                 <SfDropDownList TValue="string?" TItem="Service" PopupHeight="350px" PopupWidth="350px" Placeholder="Select a service" DataSource="@_services">
-                    <DropDownListEvents TItem="Service" TValue="string" ValueChange="@(args) => {this.selectedServiceId = args.ItemData.id; }"></DropDownListEvents>
+                    <DropDownListEvents TItem="Service" TValue="string" ></DropDownListEvents>
                     <DropDownListFieldSettings Value="id" Text="title"></DropDownListFieldSettings>
                 </SfDropDownList>
             </div>
             <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
                 <SfDropDownList TValue="string?" TItem="Employee" PopupHeight="350px" PopupWidth="350px" Placeholder="Select an employee" DataSource="@_employees">
-                    <DropDownListEvents TItem="Employee" TValue="string" ValueChange="@(args) => {this.selectedEmployeeId = args.ItemData.Id;}"></DropDownListEvents>
+                    <DropDownListEvents TItem="Employee" TValue="string" ></DropDownListEvents>
                     <DropDownListFieldSettings Value="Id" Text="UserName"></DropDownListFieldSettings>
                 </SfDropDownList>
             </div>
