--- a/Client/Client/Shared/Components/BookServiceSidebar.razor
+++ b/Client/Client/Shared/Components/BookServiceSidebar.razor
@@ -32,7 +32,7 @@
 </div>
 
 @code {
-    string[] Steps = {"Location",  "Provider", "Time", "Client"};
+    string[] Steps = {"Location",  "Time", "Master", "Client"};
     
     [Parameter]
     public int CurrentStep { get; set; }
