--- a/Client/Client/Pages/Register.razor
+++ b/Client/Client/Pages/Register.razor
@@ -51,13 +51,13 @@
                     <div class="radio-control">
                         <p class="row">Role</p>
                         <div class="row">
-                            <SfRadioButton Label="Client" Value="client" type="radio" Checked="@CheckedValue" @onchange="SelectionChange" Name="role"></SfRadioButton>
+                            <SfRadioButton Label="Client" Value="Client" type="radio" Checked="@CheckedValue" @onchange="SelectionChange" Name="role"></SfRadioButton>
                         </div>
                         <div class="row">
-                            <SfRadioButton Label="Business Owner" Value="businessOwner" type="radio" Checked="@CheckedValue" @onchange="SelectionChange" Name="role"></SfRadioButton>
+                            <SfRadioButton Label="Business Owner" Value="BusinessOwner" type="radio" Checked="@CheckedValue" @onchange="SelectionChange" Name="role"></SfRadioButton>
                         </div>
                         <div class="row">
-                            <SfRadioButton Label="Employee" Value="employee" type="radio" Checked="@CheckedValue" @onchange="SelectionChange" Name="role"></SfRadioButton>
+                            <SfRadioButton Label="Employee" Value="Employee" type="radio" Checked="@CheckedValue" @onchange="SelectionChange" Name="role"></SfRadioButton>
                         </div>
                     </div>
                 </div>
