--- a/Client/Client/Pages/AddEmployee.razor
+++ b/Client/Client/Pages/AddEmployee.razor
@@ -10,6 +10,7 @@
 @inject IServiceService ServiceService
 @inject AuthenticationStateProvider CustomAuthenticationStateProvider
 @using Syncfusion.Blazor.DropDowns
+@using Syncfusion.Blazor.Buttons
 
 
 <style>
@@ -38,34 +39,53 @@
     -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
     transition: all 0.3s ease 0s;
     }
+    
+    .interest-list > ul{
+    display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 </style>
 
 <div class="col-lg-12 content-wrapper">
     <div>
-        <h2 class="font-weight-bold">Add an employee to your business</h2>
-        <p>Please enter details below to add the employee</p>
+        <h2 class="font-weight-bold">Add and manage an employee to your business</h2>
+        <p>Please enter details below to add or edit the employees for specific services</p>
         <hr/>
     </div>
-    <div class="card px-4 mb-4 pb-4">
-        <div class="row">
-            <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
+    <div class="card px-4 pt-4 mb-4 pb-4">
+        <div class="row d-flex justify-content-center mb-4">
+            <div>
                 <SfDropDownList TValue="string?" TItem="Service" PopupHeight="350px" PopupWidth="350px" Placeholder="Select a service" DataSource="@_services">
-                    <DropDownListEvents TItem="Service" TValue="string" ></DropDownListEvents>
+                    <DropDownListEvents TItem="Service" TValue="string"></DropDownListEvents>
                     <DropDownListFieldSettings Value="id" Text="title"></DropDownListFieldSettings>
-                </SfDropDownList>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
-                <SfDropDownList TValue="string?" TItem="Employee" PopupHeight="350px" PopupWidth="350px" Placeholder="Select an employee" DataSource="@_employees">
-                    <DropDownListEvents TItem="Employee" TValue="string" ></DropDownListEvents>
-                    <DropDownListFieldSettings Value="Id" Text="UserName"></DropDownListFieldSettings>
                 </SfDropDownList>
             </div>
         </div>
 
-    </div>
-    <div class="row">
-        <div class="btn">
-            <SfButton IsPrimary="true" @onclick="HandleSubmit">Create</SfButton>
+        <div class="row d-flex justify-content-center">
+            <div style="width: 50%">
+                <h4>Employees:</h4>
+                <hr/>
+
+                @* @bind-Value=@Values[index].Value *@
+                <SfListBox CssClass="interest-list" DataSource="@_employees" TItem="Employee" TValue="string[]" @bind-Value="@Selected">
+                    <ListBoxSelectionSettings ShowCheckbox="true"></ListBoxSelectionSettings>
+                    <ListBoxFieldSettings Text="FirstName" Value="FirstName"></ListBoxFieldSettings>
+                </SfListBox>
+            </div>
+        </div>
+        
+        @if (Selected != null)
+        {
+            @Selected.Length
+        }
+
+        <div class="row">
+            <div class="btn">
+                <SfButton IsPrimary="true" @onclick="HandleSubmit">Update</SfButton>
+            </div>
         </div>
     </div>
 </div>
@@ -78,12 +98,13 @@
     private string selectedEmployeeId;
     private string selectedServiceId;
 
+    public string[] Selected;
 
     protected override async Task OnInitializedAsync()
     {
         var query = new Uri(NavigationManager.Uri).Query;
 
-        if (QueryHelpers.ParseQuery(query).TryGetValue("businessId", out var value))
+        if (QueryHelpers.ParseQuery(query).TryGetValue("id", out var value))
         {
             businessId = Convert.ToString(value);
         }
@@ -96,10 +117,10 @@
         var employeeData = await BusinessService.GetAllEmployees();
         for (int i = 0; i < employeeData.Count; i++)
         {
-            if (employeeData[i].serviceIdList.Count == 0)
-            {
+            // if (employeeData[i].serviceIdList.Count == 0)
+            // {
                 _employees.Add(employeeData[i]);
-            }
+            // }
         }
 
         var serviceData = await ServiceService.GetServicesByBusinessId(businessId);
@@ -108,7 +129,7 @@
             _services.Add(serviceData[i]);
         }
     }
-    
+
     public void OnChangeService(Syncfusion.Blazor.DropDowns.ChangeEventArgs<string, Service> args)
     {
         this.selectedServiceId = args.ItemData.id;
@@ -127,8 +148,8 @@
         }
         try
         {
-           await  BusinessService.AddEmployee(selectedEmployeeId, businessId, selectedServiceId);
-            NavigationManager.NavigateTo("/EditBusiness");
+            await BusinessService.AddEmployee(selectedEmployeeId, businessId, selectedServiceId);
+            NavigationManager.NavigateTo($"/OwnedBusinesses");
         }
         catch (Exception e)
         {
