--- a/Client/Client/Shared/Components/AddServiceForm.razor
+++ b/Client/Client/Shared/Components/AddServiceForm.razor
@@ -35,28 +35,33 @@
 </style>
 
 <EditForm Model="@ServiceModel" OnValidSubmit="@HandleSubmit">
+    <ObjectGraphDataAnnotationsValidator/>
     <div class="card px-4 mb-4 pb-4">
-    <div class="row">
-        <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
-            <SfTextBox @bind-Value="ServiceModel.title" Placeholder="Title" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfTextBox>
+        <div class="row">
+            <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
+                <SfTextBox @bind-Value="ServiceModel.title" Placeholder="Title" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfTextBox>
+                <ValidationMessage For="@(() => ServiceModel.title)"/>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
+                <SfTextBox @bind-Value="ServiceModel.description" Placeholder="Description" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfTextBox>
+                <ValidationMessage For="@(() => ServiceModel.description)"/>
+            </div>
         </div>
-        <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
-            <SfTextBox @bind-Value="ServiceModel.description" Placeholder="Description" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfTextBox>
+        <div class="row">
+            <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
+                <SfTextBox @bind-Value="ServiceModel.pictureUrl" Placeholder="Picture Url" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfTextBox>
+                <ValidationMessage For="@(() => ServiceModel.pictureUrl)"/>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
+                <SfNumericTextBox @bind-Value="ServiceModel.duration" Placeholder="Duration" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto" Min="15"></SfNumericTextBox>
+                <ValidationMessage For="@(() => ServiceModel.duration)"/>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
-            <SfTextBox @bind-Value="ServiceModel.pictureUrl" Placeholder="Picture Url" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfTextBox>
-        </div>
-        <div class="col-xs-6 col-sm-6 col-lg-6 col-md-6">
-            <SfNumericTextBox @bind-Value="ServiceModel.duration" Placeholder="Duration" CssClass="e-bigger" FloatLabelType="@FloatLabelType.Auto"></SfNumericTextBox>
-        </div>
-    </div>
     </div>
 
     <div class="row">
         <div class="btn">
-            <SfButton IsPrimary="true" @onclick="HandleSubmit">Create</SfButton>
+            <SfButton IsPrimary="true" type="submit">Create Service</SfButton>
         </div>
     </div>
 
